--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href="<%= BASE_URL %>css/bootstrap.min.css" rel="stylesheet">
+    <link href="<%= BASE_URL %>css/font-awesome.min.css" rel="stylesheet">
+    <link href="<%= BASE_URL %>css/templatemo-style.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700' rel='stylesheet'
+          type='text/css'>
+
+
     <title>se-project</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but se-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+</head>
+<noscript>
+    <strong>We're sorry but se-project doesn't work properly without JavaScript enabled. Please enable it to
+        continue.</strong>
+</noscript>
+
+<body>
+<div id="app"></div>
+</body>
 </html>
