add create routes, profile pages, search routes

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link href="<%= BASE_URL %>css/bootstrap.min.css" rel="stylesheet">
     <link href="<%= BASE_URL %>css/font-awesome.min.css" rel="stylesheet">
     <link href="<%= BASE_URL %>css/templatemo-style.css" rel="stylesheet">
+    <link href="<%= BASE_URL %>css/loader.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700' rel='stylesheet'
           type='text/css'>
 
