--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
           type='text/css'>
 
 
-    <title>se-project</title>
+    <title>Povidlo Railways</title>
 </head>
 <noscript>
-    <strong>We're sorry but se-project doesn't work properly without JavaScript enabled. Please enable it to
+    <strong style="color: white">We're sorry but se-project doesn't work properly without JavaScript enabled. Please enable it to
         continue.</strong>
 </noscript>
 
